--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fauzialifatah</title>
+    <title>XuenXz</title>
     
     <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
@@ -43,24 +43,24 @@
                 <img src="fauzi.jpg" alt="Profile Photo" class="profile-img">
             </div>
             <h1>XUEN TAKANASHI</h1>
-            <p class="title">XUELIA.</p>
+            <p class="title">X</p>
             <p class="bio">Hello everyone! I'm Xuen Takanashi, or you can call me Xuen or Asahi.
             I'm a student from Java Island, Indonesia.
             My hobbies are reading comics, such as manga, manhua, manhwa, and also playing games.</p>
             <div class="skills-container">
-                <div class="Fav Faction" data-skill="HSOS6">
-                    <i class="fab fa-html5"></i>
+                <div class="skill" data-skill="HSOS6">
+                    <i class="fab fa-HSOS6"></i>
                     <img src="https://files.cloudkuimages.guru/images/Fmr5Mpie.jpg" alt="HSOS6" style="width: 40px; height: 40px;"><span>HSOS6</span>
                 </div>
-                <div class="skill" data-skill="CSS">
+                <div class="skill" data-skill="Housekeeping">
                     <i class="fab fa-Housekeeping-alt"></i>
                     <img src="https://files.cloudkuimages.guru/images/BCWItGXa.jpg" alt="Housekeeping" style="width: 40px; height: 40px;"><span>Housekeeping</span>
                 </div>
-                <div class="skill" data-skill="JavaScript">
+                <div class="skill" data-skill="Mockingbird">
                     <i class="Mockingbird"></i>
                     <img src="https://files.cloudkuimages.guru/images/9KTJDU5X.jpg" alt="Mockingbird" style="width: 40px; height: 40px;"><span>Mockingbird</span>
                 </div>
-                <div class="skill" data-skill="TypeScript">
+                <div class="skill" data-skill="Neps">
                     <i class="Neps"></i>
                     <img src="https://files.cloudkuimages.guru/images/EWYmD1tU.jpg" alt="Neps" style="width: 40px; height: 40px;"><span>Neps</span>
                 </div>
