--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="hologram-card">
             <div class="profile-img-container">
-                <img src="fauzi.jpg" alt="Profile Photo" class="profile-img">
+                <img src="X.jpg" alt="Profile Photo" class="profile-img">
             </div>
             <h1>XUEN TAKANASHI</h1>
             <p class="title">X</p>
