--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href="https://whatsapp.com/channel/0029Vb67hgvBqbr5hIXH2h1s" class="social-link" target="_blank" title="WhatsApp"><i
-                        class="fab fa-whatsapp"></i></a>
+                <a href="https://x.com/Yuueee98" class="social-link" target="_blank" title="WhatsApp"><i
+                        class="fab fa-X"></i></a>
                 <a href="instagram.com/Asah_taka98" class="social-link" target="_blank" title="Instagram"><i
                         class="fab fa-instagram"></i></a>
                 <a href="https://wa.me/p/23878908555105635/6285607742196" class="social-link" target="_blank"
